syntax = "proto3";

// import "google/protobuf/empty.proto";

option go_package = "orcanet/market/market";

package market;

service MarketService {
  rpc RequestQuery (stream Request) returns (stream Response) {} 
}

message Request {
  oneof request_type {
    FileRequest filerequest = 1;
    CheckHolder checkholder = 2;
    SupplyFile  supplyfile = 3;
  }
}

message Response {
  oneof response_type {
    FileResponse fileresponse = 1;
    Holders holders = 2; 
    string message = 3; 
  }
}

message User {
  string id = 1;
  string name = 2;
  string ip = 3;
  int32 port = 4;
  int32 price = 5;
}

message FileRequest {
  User user = 1;
  string fileHash = 3;
}

message FileResponse {
  bool exists = 1;
  string message = 2;
}

message SupplyFile {
  User user = 1;
  string fileHash = 2;
}

message CheckHolder {
  string fileHash = 1;
}

message Holders {
  repeated SupplyFile holders = 1;
}